[gd_scene load_steps=2 format=3 uid="uid://promotion_popup"]

[ext_resource type="Script" path="res://scenes/ui/PromotionPopup.gd" id="1"]

[node name="PromotionPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PopupPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300
margin_top = -250
margin_right = 300
margin_bottom = 250

[node name="ContentContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="TitleLabel" type="Label" parent="PopupPanel/ContentContainer"]
layout_mode = 2
text = "üéâ ÏäπÍ≤© Ï∂ïÌïòÌï©ÎãàÎã§! üéâ"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="Spacer1" type="Control" parent="PopupPanel/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="SquadLevelContainer" type="HBoxContainer" parent="PopupPanel/ContentContainer"]
layout_mode = 2
alignment = 1

[node name="PreviousSquadLabel" type="Label" parent="PopupPanel/ContentContainer/SquadLevelContainer"]
layout_mode = 2
text = "U18 Youth"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="ArrowLabel" type="Label" parent="PopupPanel/ContentContainer/SquadLevelContainer"]
layout_mode = 2
text = "  ‚Üí  "
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="NewSquadLabel" type="Label" parent="PopupPanel/ContentContainer/SquadLevelContainer"]
layout_mode = 2
text = "B-Team"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="Spacer2" type="Control" parent="PopupPanel/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="PlayerInfoLabel" type="Label" parent="PopupPanel/ContentContainer"]
layout_mode = 2
text = "Main Player CA: 102"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="Spacer3" type="Control" parent="PopupPanel/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ReasonsTitle" type="Label" parent="PopupPanel/ContentContainer"]
layout_mode = 2
text = "ÏäπÍ≤© Ï°∞Í±¥ Ï∂©Ï°±:"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="Spacer4" type="Control" parent="PopupPanel/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 5)

[node name="ReasonsContainer" type="VBoxContainer" parent="PopupPanel/ContentContainer"]
layout_mode = 2

[node name="Reason1" type="Label" parent="PopupPanel/ContentContainer/ReasonsContainer"]
layout_mode = 2
text = "‚úÖ Hard Gate: CA ‚â• 100"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Reason2" type="Label" parent="PopupPanel/ContentContainer/ReasonsContainer"]
layout_mode = 2
text = "‚úÖ Consistent training effort"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Reason3" type="Label" parent="PopupPanel/ContentContainer/ReasonsContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Reason4" type="Label" parent="PopupPanel/ContentContainer/ReasonsContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Spacer5" type="Control" parent="PopupPanel/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="PopupPanel/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Í≥ÑÏÜçÌïòÍ∏∞"
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="PopupPanel/ContentContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
